<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/tvMonthName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="April"
        android:textColor="#78849E"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_marginBottom="8dp">

        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/mo" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/tu" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/we" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/th" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/fr" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/sa" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/su" android:gravity="center" android:textColor="#78849E" android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDaysGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

</LinearLayout>