<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg_top_glow"
    android:fitsSystemWindows="true"
    tools:context=".subscriptionModel.SubscriptionModelActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            android:src="@drawable/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivMainStar"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/star_subscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/unlock_the_ntetragon_infinity"
            android:textColor="@color/text_color"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMainStar" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:text="@string/premium_gives_you_full_access_nto_every_features_and_more"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <app.rive.runtime.kotlin.RiveAnimationView
            android:id="@+id/correct_mr_square_2"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toTopOf="@+id/containerAnnual"
            app:layout_constraintEnd_toEndOf="parent"
            app:riveAutoPlay="true"
            app:riveResource="@raw/mr_square_correct_2"
            app:riveStateMachine="State Machine 1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerAnnual"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_subscription_selected"
            android:paddingHorizontal="35dp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

            <TextView
                android:id="@+id/tvAnnualLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/annual"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tvAnnualSub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvAnnualSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/_12_month_15"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAnnualLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/_1_33_mo"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerMonthly"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_subscription_unselected"
            android:paddingHorizontal="35dp"
            app:layout_constraintTop_toBottomOf="@id/containerAnnual">

            <TextView
                android:id="@+id/tvMonthlyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/monthly"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/_3_mo"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <app.rive.runtime.kotlin.RiveAnimationView
            android:id="@+id/correct_mr_square"
            android:layout_width="130dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toTopOf="@+id/containerMonthly"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:riveAutoPlay="true"
            app:riveResource="@raw/mr_square_correct"
            app:riveStateMachine="State Machine 1" />

        <FrameLayout
            android:id="@+id/subscirbe_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:id="@+id/subscribe_enabled_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/custom_gradient_button_shadow"
                    android:translationY="5dp" />

                <Button
                    android:id="@+id/subscribe_enabled_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/custom_gradient_button"
                    android:fontFamily="@font/inter_semibold"
                    android:stateListAnimator="@drawable/button_animator"
                    android:text="@string/subscribe"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:backgroundTint="@null" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/subscribe_disabled_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/gray_2"
                    android:translationY="5dp" />

                <TextView
                    android:id="@+id/subscribe_disabled_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/gray_1"
                    android:textSize="17sp"
                    android:translationY="5dp" />
            </FrameLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>