<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/choose_your_language"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ENGLISH -->
    <LinearLayout
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="15dp"
        android:paddingBottom="14dp"
        app:layout_constraintTop_toBottomOf="@+id/titleTv">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_flag_uk" /> <!-- Ensure you have this drawable -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/english"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- RUSSIAN -->
    <LinearLayout
        android:id="@+id/russian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="15dp"
        android:paddingBottom="14dp"
        app:layout_constraintTop_toBottomOf="@+id/english">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_flag_russia" /> <!-- Ensure you have this drawable -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/russian"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- UZBEK -->
    <LinearLayout
        android:id="@+id/uzbek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="15dp"
        android:paddingBottom="14dp"
        app:layout_constraintTop_toBottomOf="@+id/russian">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_flag_uzbekistan" /> <!-- Ensure you have this drawable -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/uzbek"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>